more style updates

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,6 +4,7 @@ body {
 
 #wrapper {
   width: 100vw;
+  height: 100vh;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
@@ -16,14 +17,21 @@ h2 {
 
 #messenger-wrapper .container {
   height: 100%;
+  width: 260px;
 }
 
 #chat {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 90vh;
+  height: 100%;
   overflow-y: scroll;
+}
+
+#connect {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .hidden {
@@ -75,18 +83,21 @@ ul#messages li {
 
 #peer-camera {
   width: 100%;
+  background-color: #d5d5d5;
 }
 
 #my-camera > video {
-  width: 100%;
-  height: 30vh;
-  min-height: 200px;
+  height: 20vh;
+  min-height: 150px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 #peer-camera > video {
   width: 100%;
-  height: 70vh;
-  min-height: 400px;
+  height: 100%;
+  min-height: 300px;
 }
 
 @media screen and (max-width: 800px){
